manage address done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.abishek.comida">
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".myOrder.OrderDetails"></activity>
+        <activity android:name=".address.AddNewAddress"></activity>
+        <activity android:name=".address.AddressHomePage" />
+        <activity android:name=".myOrder.OrderDetails" />
         <activity android:name=".myOrder.MyOrders" />
         <activity android:name=".aboutUs.AboutUs" />
         <activity android:name=".cart.Checkout" />
@@ -26,6 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/map_api" />
     </application>
 
 </manifest>
