--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.1.0'
 
     implementation 'com.karumi:dexter:6.2.2'
+    implementation 'com.github.transferwise:sequence-layout:1.1.1'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
 
