--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
 
+    implementation "androidx.room:room-runtime:2.2.6"
+    annotationProcessor 'androidx.room:room-compiler:2.2.6'
+
+
 
 }
