--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
@@ -65,6 +66,9 @@
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity
             android:name=".splashScreen.onBoarding"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -77,6 +81,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_api" />
+        
     </application>
 
 </manifest>
