--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
 
+    implementation 'com.razorpay:checkout:1.5.13'
+
 
 
 }
